# obstacle_detector

./: CMakeLists.txt  README.md  package.xml
cfg/: ObstacleExtractor.cfg  ObstacleExtractorConfig.cfg  ObstacleTracker.cfg
include/obstacle_detector/: obstacle_extractor.h  obstacle_tracker.h
launch/: obstacles_extractor.launch
src/: obstacle_extractor.cpp  obstacle_tracker.cpp
